--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,41 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.testcase-view {
+    padding: 20px;
+    font-family: Arial, sans-serif;
+  }
+  
+  .dropdown {
+    margin-bottom: 15px;
+  }
+  
+  .dropdown label {
+    margin-right: 10px;
+  }
+  
+  .testcase-table {
+    margin-top: 20px;
+  }
+  
+  .error {
+    color: red;
+  }
+
+/* Hide scrollbar but allow scrolling */
+.custom-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.custom-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Edge */
+}
+
+
+/* sidebar */
+.icon-size{
+  font-size: 18px;
+}
+  
